<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center"
    android:paddingTop="75dp"
    tools:context=".ApplyLoan">

    <TextView
        android:id="@+id/loanText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fuliza_branch_mobile_loans"
        android:layout_margin="15dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="26sp"/>

    <EditText
        android:id="@+id/amount"
        android:layout_below="@+id/loanText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:gravity="center"
        android:background="@android:color/transparent"
        android:padding="8dp"
        android:layout_margin="15dp"
        android:hint="@string/enter_amount_to_apply"
        android:textColorHint="#fff"
        android:textColor="#FFF"
        android:maxLines="1"
        android:textSize="24dp"
        android:textStyle="bold"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/requestLoan"
        android:layout_below="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_white"
        android:text="@string/request_loan"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:textColor="#303F9F"
        android:textAllCaps="false"
        android:padding="16dp"
        android:clickable="true"
        android:focusable="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="30dp"/>

    <TextView
        android:id="@+id/applied"
        android:layout_below="@id/requestLoan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/applied_check_status"
        android:layout_margin="15dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#2196F3"
        android:textSize="20sp"/>
    <LinearLayout
        android:id="@+id/banner_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"/>
</RelativeLayout>