<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
        tools:context=".AfterLaunch">
        <ImageView
            android:id="@+id/icon"
            android:layout_centerHorizontal="true"
            android:layout_width="150dp"
            android:layout_marginTop="30dp"
            android:layout_height="150dp"
            android:src="@mipmap/ic_launcher_round"
            android:contentDescription="@string/icon" />

        <TextView
            android:id="@+id/sell"
            android:layout_below="@+id/icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="18sp"
            android:textColor="@color/white"
            android:text="@string/gfastloan"
            android:textStyle="normal"
            android:layout_marginTop="20dp"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/checkBoxcontainer"
            android:layout_below="@+id/sell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10sp"
            android:orientation="horizontal"
            android:gravity="center">
            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:gravity="center"
                android:buttonTint="#fff"
                android:text="Agree to "
               />
            <TextView
                android:id="@+id/privacyPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textStyle="bold"
                android:text="@string/agree_to_privacy_policy"/>
        </LinearLayout>

        <Button
            android:id="@+id/next"
            android:layout_below="@+id/checkBoxcontainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_white"
            android:text="@string/next"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:textColor="#303F9F"
            android:textAllCaps="true"
            android:padding="12dp"
            android:clickable="true"
            android:focusable="true"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:layout_margin="12dp"/>

        <TextView
            android:id="@+id/terms"
            android:layout_below="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="18sp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:text="@string/terms_and_conditions"
            android:textStyle="normal"
            android:textSize="20sp"
            android:layout_marginTop="15dp"/>

        <LinearLayout
            android:id="@+id/banner_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"/>
</RelativeLayout>
